[package]
name = "cdumay_config"
version = "0.1.0"
edition = "2024"

authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
description = "A Rust Library for configuration manipulation and export"
documentation = "https://docs.rs/cdumay_config"
homepage = "https://github.com/cdumay/cdumay_config"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay_config"

[dependencies]
cdumay_error = { version = "1.0", features = ["derive"] }
cdumay_error_json = "0.1"
cdumay_error_toml = { version = "0.1", optional = true }
cdumay_error_yaml = { version = "0.1", optional = true }
log = "0.4"
serde = "1.0"
serde-value = "0.7"
serde-xml-rs = { version = "0.8", optional = true }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }
shellexpand = "3.1"
toml = { version = "0.8", optional = true }

[features]
toml = ["dep:toml", "cdumay_error_toml"]
xml = ["serde-xml-rs"]
yaml = ["serde_yaml", "cdumay_error_yaml"]

[package.metadata.docs.rs]
all-features = true